--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          printf "%s\n" "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
         env:
@@ -25,10 +25,10 @@ jobs:
         run: |
           ssh -i ~/.ssh/id_ed25519 \
               -o IdentitiesOnly=yes \
-              -o StrictHostKeyChecking=yes \
+              -o PreferredAuthentications=publickey \
+              -o PubkeyAuthentication=yes \
               alien@${{ secrets.SERVER_IP }} << 'EOF'
                 set -e
                 cd ~/flask-instagram-download
                 git pull origin main
-                docker compose up -d --build
           EOF
