--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,10 +20,13 @@ jobs:
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
 
       - name: Check SSH key fingerprint
         run: ssh-keygen -lf ~/.ssh/id_ed25519
 
       - name: Deploy to server
         run: ssh -i ~/.ssh/id_ed25519 -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes alien@${{ secrets.SERVER_IP }} "cd ~/flask-instagram-download && git pull origin main"
+        env:
+          SERVER_IP: ${{ secrets.SERVER_IP }}
 
