--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,17 +15,17 @@ jobs:
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
-          printf "%s\n" "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Check SSH key fingerprint
         run: ssh-keygen -lf ~/.ssh/id_ed25519
 
       - name: Deploy to server
-        run: | 
-          ssh alien@${{ secrets.SERVER_IP }} "cd ~/flask-instagram-download && git pull origin main"
-
-
+        run: |
+          ssh -i ~/.ssh/id_ed25519 alien@${{ secrets.SERVER_IP }} << 'EOF'
+            cd ~/flask-instagram-download
+            git pull origin main
+            docker compose up -d --build
+          EOF
